# ROMANIAN_TOXICITY_DATASET

./: .gitignore  CLAUDE.md  GHID_ANTRENAMENT_RO.md  README.md  docker-compose.yml  pyproject.toml  settings.yaml
checkpoints/: README.md  eval_results.json  judge_reasoning.jsonl
checkpoints/checkpoint-100/: trainer_state.json
checkpoints/checkpoint-125/: trainer_state.json
checkpoints/checkpoint-150/: trainer_state.json
checkpoints/checkpoint-175/: trainer_state.json
checkpoints/checkpoint-200/: trainer_state.json
checkpoints/checkpoint-225/: trainer_state.json
checkpoints/checkpoint-25/: trainer_state.json
checkpoints/checkpoint-250/: trainer_state.json
checkpoints/checkpoint-275/: trainer_state.json
checkpoints/checkpoint-300/: trainer_state.json
checkpoints/checkpoint-325/: trainer_state.json
checkpoints/checkpoint-350/: trainer_state.json
checkpoints/checkpoint-375/: trainer_state.json
config/: .env.example  litellm_config.yaml  settings.yaml
data/: rubrics.json
docs/: README_TECHNICAL.md  todo.md
logs/: pipeline_20260208.json  pipeline_20260209.json
output/: augmented_dataset.json  augmented_dataset.parquet  eval_judge_cot.json  eval_judge_definition.json  eval_judge_few-shot.json  eval_results.json  eval_results_baseline.json  eval_results_judge.json
scripts/: antrenare_ro.sh  augment_paraphrases.py  deploy.sh  evaluate.py  evaluate_judge.py  paraphrase.py  train.py
test1/: CONFIGURATIE_GPU.md  START_TIME.txt  STATUS_ANTRENAMENT.md  monitor_training.sh  start_training.sh  train_test1.py  training_log.txt  verifica_progres.sh
(+49 files in other folders)
